--- a/templates/imported.html
+++ b/templates/imported.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
 <head>
     <title>Your IMDb import</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-<p>This ratings will appear shortly on your Facebook timeline</p>
+<p>These ratings will appear shortly on your Facebook timeline</p>
 <ul>
     {% for i in list_imports %}
     <li><a href="{{i.rating.film.imdb_url}}">{{i.rating.film.title}}</a>
