Improved look & feel

--- a/templates/imported.html
+++ b/templates/imported.html
@@ -3,6 +3,10 @@
 <head>
     <title>Your IMDb import</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link
+            href='http://fonts.googleapis.com/css?family=Droid+Sans|Philosopher'
+            rel='stylesheet' type='text/css'/>
+    <link href="/pages/fbmovies.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <p>These ratings will appear shortly on your Facebook timeline</p>
