--- a/templates/rating.html
+++ b/templates/rating.html
@@ -8,6 +8,10 @@
     <meta property="og:site_name" content="Movie Importer"/>
     <meta property="og:object" content="{{rating.film.fb_id}}"/>
     <meta property="og:url" content="http://fb-movies.appspot.com/rating/{{id}}"/>
+    <link
+            href='http://fonts.googleapis.com/css?family=Droid+Sans|Philosopher'
+            rel='stylesheet' type='text/css'/>
+    <link href="/pages/fbmovies.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <h1>Rating of {{rating.film}}</h1>
